KategoriController dosyasında yeni bir db değişkeni oluşturuldu. Daha sonra tablo verileri liste şeklinde alındı.

--- a/MVC_KUTUPHANE/Views/Kategori/Index.cshtml
+++ b/MVC_KUTUPHANE/Views/Kategori/Index.cshtml
@@ -4,13 +4,6 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
-<h2>Boostrap Dersleri</h2>
+<h2>Kategoriler</h2>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra leo dolor. In ut convallis ante, id tempor leo. Cras eleifend laoreet maximus. Nunc faucibus a est nec faucibus. Ut condimentum velit a feugiat imperdiet. Quisque ligula diam, tristique sed convallis in, tempor ut magna. Donec sollicitudin urna ligula, a luctus tellus ullamcorper a. Fusce ac dolor tincidunt, lacinia tortor sit amet, elementum nulla. Morbi sodales turpis eget ante facilisis hendrerit. Quisque molestie lectus semper velit tempor, quis rutrum nisi sollicitudin. Phasellus vitae vehicula odio. Maecenas gravida non tortor non scelerisque. Aliquam elementum scelerisque ligula, vitae dignissim quam molestie vitae. In vel urna ultricies augue faucibus vehicula.
-
-Quisque diam lectus, rutrum vitae nibh et, commodo dictum leo. Sed sollicitudin lacus ac ligula condimentum, nec tempor elit porttitor. Phasellus tempor congue mauris ut vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pharetra vulputate odio. Quisque venenatis placerat tincidunt. Quisque id enim leo.
-
-Nulla sollicitudin urna sem, vel volutpat est sodales in. Donec aliquam ligula eget feugiat aliquet. In hac habitasse platea dictumst. Phasellus vitae semper lorem. In hac habitasse platea dictumst. Praesent nec auctor ipsum. Nam aliquam nisi at ex rhoncus luctus. In euismod fermentum diam vitae iaculis. Etiam laoreet elementum tempor. Mauris commodo, lacus non fringilla vulputate, ante augue luctus ligula, ut ornare augue mi quis metus. Praesent hendrerit lorem ac ex laoreet molestie. Nullam pulvinar augue vulputate sodales interdum.
-
-Mauris ut libero sodales, semper sem sed, aliquam ipsum. Fusce vel lobortis enim. Nam dictum porttitor blandit. Donec magna augue, pharetra vel egestas in, aliquam id metus. Sed feugiat lectus in maximus euismod. Nunc fermentum mattis elit, eu luctus ipsum luctus quis. Nunc ut elit felis. Sed pharetra risus vitae libero posuere, ac faucibus nisi auctor.
 
