--- a/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
+++ b/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
 }
-
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,7 +24,7 @@ body {font-family: "Lato", sans-serif;}
 }
 
 .sidebar a {
-  padding: 6px 8px 6px 16px;
+  padding: 10px 8px 6px 16px;
   text-decoration: none;
   font-size: 20px;
   color: #818181;
@@ -49,10 +49,19 @@ body {font-family: "Lato", sans-serif;}
 <body>
 
     <div class="sidebar">
-        <a href="#home"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="#services"><i class="fa fa-fw fa-wrench"></i> Services</a>
-        <a href="#clients"><i class="fa fa-fw fa-user"></i> Clients</a>
-        <a href="#contact"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+        <a href="#home"><i class="glyphicon glyphicon-home"></i> &nbsp; Ana Sayfa </a>
+        <a href="#services"><i class="glyphicon glyphicon-list"></i> &nbsp; Kategoriler</a>
+        <a href="#clients"><i class="glyphicon glyphicon-book"></i> &nbsp; Kitaplar</a>
+        <a href="#contact"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Yazarlar</a>
+        <a href="#contact"><i class="glyphicon glyphicon-user"></i> &nbsp; Üyeler</a>
+        <a href="#contact"><i class="glyphicon glyphicon-tower"></i> &nbsp; Personeller</a>
+        <a href="#contact"><i class="glyphicon glyphicon-circle-arrow-right"></i> &nbsp; Ödünç Kitap Ver</a>
+        <a href="#contact"><i class="glyphicon glyphicon-circle-arrow-left"></i> &nbsp; Ödünç Kitap Al</a>
+        <a href="#contact"><i class="glyphicon glyphicon-usd"></i> &nbsp; Kasa</a>
+        <a href="#contact"><i class="glyphicon glyphicon-dashboard"></i> &nbsp; İşlemler</a>
+        <a href="#contact"><i class="glyphicon glyphicon-cog"></i> &nbsp; Ayarlar</a>
+        <a href="#contact"><i class="glyphicon glyphicon-phone"></i> &nbsp; Yardım</a>
+        <a href="#contact"><i class="glyphicon glyphicon-remove-sign"></i> &nbsp; Çıkış</a>
     </div>
 
     <div class="main">
