--- a/MVC_KUTUPHANE/Views/Kategori/Index.cshtml
+++ b/MVC_KUTUPHANE/Views/Kategori/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using MVC_KUTUPHANE.Models.Entity
+@model List<TBLKATEGORI>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/Layout.cshtml";
@@ -6,4 +8,21 @@
 
 <h2>Kategoriler</h2>
 
-
+<table class="table table-bordered ">
+    <tr>
+        <th>KATEGORİ ID</th>
+        <th>KATEGORİ ADI</th>
+        <th>SİL</th>
+        <th>GÜNCELLE</th>
+    </tr>
+    @foreach(var ktg in Model) // ktg adı burada önemsiz istediğimizi yazabiliriz.
+            {
+            <tr>
+                <td>@ktg.ID</td>
+                <td>@ktg.AD</td>
+                <td><a href="#" class="btn btn-danger">SİL</a></td>
+                <td><a href="#" class="btn btn-success">GÜNCELLE</a></td>
+            </tr>    
+            }
+</table>
+<a href="#" class="btn btn-primary">Yeni Kategori Ekle</a>
