Kategori Ekleme işlemleri yapıldı. "KategoriEkle" dosyası oluşturuldu.

--- a/MVC_KUTUPHANE/Views/Kategori/Index.cshtml
+++ b/MVC_KUTUPHANE/Views/Kategori/Index.cshtml
@@ -25,4 +25,4 @@
             </tr>    
             }
 </table>
-<a href="#" class="btn btn-primary">Yeni Kategori Ekle</a>
+<a href="/Kategori/KategoriEkle/" class="btn btn-primary">Yeni Kategori Ekle</a>
