--- a/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
+++ b/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
@@ -55,7 +55,7 @@ body {font-family: "Lato", sans-serif;}
         <a href="/Yazar/Index/"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Yazarlar</a>
         <a href="/Uye/Index/"><i class="glyphicon glyphicon-user"></i> &nbsp; Üyeler</a>
         <a href="/Personel/Index/"><i class="glyphicon glyphicon-tower"></i> &nbsp; Personeller</a>
-        <a href="#"><i class="glyphicon glyphicon-circle-arrow-right"></i> &nbsp; Ödünç Kitap Ver</a>
+        <a href="/Odunc/OduncVer/"><i class="glyphicon glyphicon-circle-arrow-right"></i> &nbsp; Ödünç Kitap Ver</a>
         <a href="#"><i class="glyphicon glyphicon-circle-arrow-left"></i> &nbsp; Ödünç Kitap Al</a>
         <a href="#"><i class="glyphicon glyphicon-usd"></i> &nbsp; Kasa</a>
         <a href="#"><i class="glyphicon glyphicon-dashboard"></i> &nbsp; İşlemler</a>
