Ödünç verme ve iade etme işlemleri yapıldı.

--- a/MVC_KUTUPHANE/Views/Kitap/KitapGetir.cshtml
+++ b/MVC_KUTUPHANE/Views/Kitap/KitapGetir.cshtml
@@ -37,6 +37,7 @@
             @Html.TextBoxFor(k => k.SAYFA, new { @class = "form-control" })
         </div>
         <button class="btn btn-warning">Kitap Bilgilerini Güncelle</button>
+        @*<input type="hidden" name="Durum" value="True" />"*@
     </div>
 }
 
