--- a/MVC_KUTUPHANE/Views/Odunc/OduncVer.cshtml
+++ b/MVC_KUTUPHANE/Views/Odunc/OduncVer.cshtml
@@ -29,6 +29,7 @@
     </div>
     <div style="margin-top:15px">
         <button class="btn btn-group" style="background-color:#a330b5; color:white">Kitabı Ödünç Ver</button>
+        <input type="hidden" value="False" name="ISLEMDURUM" />
     </div>
 </form>
 
