Dashboard ve istatistik bölümü tasarımı yapıldı.

--- a/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
+++ b/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
@@ -60,7 +60,9 @@ body {font-family: "Lato", sans-serif;}
         <a href="/istatistik/Index/"><i class="glyphicon glyphicon-sort"></i> &nbsp; İstatistikler</a>
         <a href="#"><i class="glyphicon glyphicon-usd"></i> &nbsp; Kasa</a>
         <a href="/islem/Index/"><i class="glyphicon glyphicon-dashboard"></i> &nbsp; İşlemler</a>
-        <a href="#"><i class="glyphicon glyphicon-picture"></i> &nbsp; Galeri</a>
+        <a href="/istatistik/Hava/"><i class="glyphicon glyphicon-cloud"></i> &nbsp; Hava Raporu</a>
+        <a href="/istatistik/HavaKart/"><i class="glyphicon glyphicon-plus"></i> &nbsp; Hava Kartları</a>
+        <a href="/istatistik/Galeri/"><i class="glyphicon glyphicon-picture"></i> &nbsp; Galeri</a>
         <a href="/vitrin/Index/"><i class="glyphicon glyphicon-gift"></i> &nbsp; Vitrin</a>
         <a href="#"><i class="glyphicon glyphicon-cog"></i> &nbsp; Ayarlar</a>
         <a href="#"><i class="glyphicon glyphicon-phone"></i> &nbsp; Yardım</a>
