--- a/MVC_KUTUPHANE/Views/Odunc/Odunciade.cshtml
+++ b/MVC_KUTUPHANE/Views/Odunc/Odunciade.cshtml
@@ -30,6 +30,9 @@
                     <br />
                     <label>Üyenin Getirdiği Tarih</label>
                     <input type="text" class="form-control" name="UYEGETIRTARIH" value="@DateTime.Now.ToShortDateString()" />
+                    <br />
+                    <label>Geç Gelen Gün Sayısı</label>
+                    <input type="text" class="form-control" id="Gecinput" value="@ViewBag.dgr" />
                 </div>
                 <div>
                     <button class="btn btn-warning">Ödünç Kitabı Geri Al</button>
