--- a/MVC_KUTUPHANE/Views/Login/GirisYap.cshtml
+++ b/MVC_KUTUPHANE/Views/Login/GirisYap.cshtml
@@ -10,7 +10,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <title>MVC5 Kütüphane</title>
@@ -38,20 +38,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <h1>Kütüphane Giriş Paneli</h1>
     <div class=" w3l-login-form">
         <h2>Login</h2>
-        <form action="#" method="POST">
-
+        @using (Html.BeginForm("GirisYap", "Login", FormMethod.Post))
+        {
             <div class=" w3l-form-group">
                 <label>Kullanıcı Adı:</label>
                 <div class="group">
                     <i class="fas fa-user"></i>
-                    <input type="text" class="form-control" placeholder="Kullanıcı Adınız" required="required" />
+                    <input type="text" class="form-control" placeholder="Kullanıcı Adınız" required="required" name="MAIL" />
                 </div>
             </div>
             <div class=" w3l-form-group">
                 <label>Şifre:</label>
                 <div class="group">
                     <i class="fas fa-unlock"></i>
-                    <input type="password" class="form-control" placeholder="Şifreniz" required="required" />
+                    <input type="password" class="form-control" placeholder="Şifreniz" required="required" name="SIFRE" />
                 </div>
             </div>
             <div class="forgot">
@@ -59,7 +59,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <p><input type="checkbox">Beni Hatırla</p>
             </div>
             <button type="submit">Giriş Yap</button>
-        </form>
+        }
         <p class=" w3l-register-p">Bir hesabınız yok mu?<a href="/KayitOl/Kayit/" class="register"> Kayıt Ol.</a></p>
     </div>
     <footer>
