--- a/MVC_KUTUPHANE/Views/Yazar/Index.cshtml
+++ b/MVC_KUTUPHANE/Views/Yazar/Index.cshtml
@@ -12,9 +12,9 @@
         <th>ID</th>
         <th>AD</th>
         <th>SOYAD</th>
-        <th>DETAY</th>
         <th>SİL</th>
         <th>GÜNCELLE</th>
+        <th>YAZARIN KİTAPLARI</th>
     </tr>
     @foreach(var y in Model)
             {
@@ -22,9 +22,9 @@
                     <td>@y.ID</td>
                     <td>@y.AD</td>
                     <td>@y.SOYAD</td>
-                    <td>@y.DETAY</td>
                     <td>@Html.ActionLink("Sil","YazarSil",new { id=y.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Silmek İstiyor musunuz?')" }) </td>
-                    <td><a href="/Yazar/YazarGetir/@y.ID" class="btn btn-success">Güncelle</a></td>
+                    <td><a href="/Yazar/YazarGetir/@y.ID" class="btn btn-warning">Güncelle</a></td>
+                    <td><a href="/Yazar/YazarKitaplar/@y.ID" class="btn btn-default" style="background-color:lightsalmon" >Yazarın Kitapları</a></td>
                 </tr>
             }
 </table>
