Bir takım eksiklikler giderildi.

--- a/MVC_KUTUPHANE/Views/Yazar/YazarKitaplar.cshtml
+++ b/MVC_KUTUPHANE/Views/Yazar/YazarKitaplar.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
-<h2>...</h2>
+<h2>@ViewBag.y1</h2>
 <br />
 <table class="table table-striped">
     <tr>
