--- a/MVC_KUTUPHANE/Views/Uye/Index.cshtml
+++ b/MVC_KUTUPHANE/Views/Uye/Index.cshtml
@@ -14,13 +14,10 @@
         <th>ÜYE ID</th>
         <th>ÜYE ADI</th>
         <th>ÜYE SOYADI</th>
-        <th>MAİL</th>
-        <th>KULLANICI ADI</th>
-        <th>ŞİFRESİ</th>
-        <th>TELEFON</th>
         <th>OKUL</th>
         <th>SİL</th>
         <th>GÜNCELLE</th>
+        <th>ÜYE KİTAP GEÇMİŞİ</th>
     </tr>
     @foreach (var uye in Model) // ktg adı burada önemsiz istediğimizi yazabiliriz.
     {
@@ -28,13 +25,10 @@
             <td>@uye.ID</td>
             <td>@uye.AD</td>
             <td>@uye.SOYAD</td>
-            <td>@uye.MAIL</td>
-            <td>@uye.KULLANICIADI</td>
-            <td>@uye.SIFRE</td>
-            <td>@uye.TELEFON</td>
             <td>@uye.OKUL</td>
             <td><a href="/Uye/UyeSil/@uye.ID" class="btn btn-danger">SİL</a></td>
             <td><a href="/Uye/UyeGetir/@uye.ID" class="btn btn-success">GÜNCELLE</a></td>
+            <td><a href="/Uye/UyeKitapGecmis/@uye.ID" class="btn btn-success" style="background-color:lightseagreen">Kitap Geçmişi</a></td>
         </tr>
 
     }
