--- a/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
+++ b/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
@@ -49,7 +49,7 @@ body {font-family: "Lato", sans-serif;}
 <body>
 
     <div class="sidebar">
-        <a href="#"><i class="glyphicon glyphicon-home"></i> &nbsp; Ana Sayfa </a>
+        <a href="/istatistik/Index/"><i class="glyphicon glyphicon-home"></i> &nbsp; Ana Sayfa </a>
         <a href="/Kategori/Index/"><i class="glyphicon glyphicon-list"></i> &nbsp; Kategoriler</a>
         <a href="/Kitap/Index"><i class="glyphicon glyphicon-book"></i> &nbsp; Kitaplar</a>
         <a href="/Yazar/Index/"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Yazarlar</a>
@@ -58,7 +58,7 @@ body {font-family: "Lato", sans-serif;}
         <a href="/Odunc/OduncVer/"><i class="glyphicon glyphicon-circle-arrow-right"></i> &nbsp; Ödünç Kitap Ver</a>
         <a href="/Odunc/Index/"><i class="glyphicon glyphicon-circle-arrow-left"></i> &nbsp; Ödünç Kitap Al</a>
         <a href="/istatistik/Index/"><i class="glyphicon glyphicon-sort"></i> &nbsp; İstatistikler</a>
-        <a href="#"><i class="glyphicon glyphicon-usd"></i> &nbsp; Kasa</a>
+        <a href="/Duyuru/Index/"><i class="glyphicon glyphicon-earphone"></i> &nbsp; Duyurular</a>
         <a href="/islem/Index/"><i class="glyphicon glyphicon-dashboard"></i> &nbsp; İşlemler</a>
         <a href="/istatistik/Hava/"><i class="glyphicon glyphicon-cloud"></i> &nbsp; Hava Raporu</a>
         <a href="/istatistik/HavaKart/"><i class="glyphicon glyphicon-plus"></i> &nbsp; Hava Kartları</a>
